@@ -5,6 +5,7 @@ x.x:
 - added: support for IDP provided username #2
 - added: support for CAS #6
 - added: support for force authentication #4
+- added: a setting to automaticly create accounts based on the IDP information #3
 
 1.2 (2013-10-14):
 
